--- a/index.html
+++ b/index.html
@@ -16,39 +16,37 @@
 
 
     <!--Navigation Bar Start -->
-    <section id="navbarSection">
+    <section id="navbarSection" style="background-color:#2C3E50;" class="p-3">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
-            <div class="container">
-                <a class="navbar-brand fw-bold" href="#">START BOOTSRAP</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                    <span > MENU</span><span class="navbar-toggler-icon"></span>
+        <div class="container fw-bold" >
+            <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+                <a href="#" class="navbar-brand">GRAPHIC DESIGNER</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#togglecollapseMenu">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse ms-auto">
-                    <ul class="navbar-nav ms-auto fw-bold">
+                <div class="collapse navbar-collapse" id="togglecollapseMenu">
+                    <ul class="navbar-nav text-center ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PORTFOLIO</a>
+                            <a href="#" class="nav-link text-white px-3">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a href="#" class="nav-link text-white px-3">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a href="#" class="nav-link text-white px-3">CONTACT</a>
                         </li>
-
-
                     </ul>
-
                 </div>
-            </div>
-        </nav>
-
+            </nav>
+        </div>
     </section>
-
-
     <!--Navigation Bar End  -->
 
+
+    <!-- Hero Section Start -->
+    
+    <!-- Hero Section End -->
 
 
 
